hs-bindgen/examples/failing/fixedarray_res_b.h
typedef int triple[3];
triple fun_2(int x);
